MDEV-7262: innodb.innodb-mdev7046 and innodb-page_compression* fail on BuildBot

If persistent trim is not used some OS require that we write full page.