storage/innobase/fil/fil0pagecompress.cc
@@ -477,6 +477,12 @@ fil_compress_page(
 	srv_stats.page_compression_saved.add((len - write_size));
 	srv_stats.pages_page_compressed.inc();
 
+	/* If we do not persistently trim rest of page, we need to write it
+	all */
+	if (!srv_use_trim) {
+		write_size = len;
+	}
+
 	*out_len = write_size;
 
 	return(out_buf);
